titolo parte principale più intestazione tabella

--- a/index.html
+++ b/index.html
@@ -18,8 +18,31 @@
         <img src="img/pexels-bill-emrich-230794-2.jpg" alt="first-image-in-london">
         <hr>
 
+
+
     </header>
     <!--Fine intestazione-->
+
+    <!--Inizio prima parte principale-->
+    <main>
+        <h2>
+            Le mie spese
+        </h2>
+        <table>
+            <thead>
+                <th>
+                    Numero
+                </th>
+                <th>
+                    Descrizione
+                </th>
+                <th>
+                    Costo
+                </th>
+            </thead>
+        </table>
+
+    </main>
     
 </body>
 </html>
