--- a/index.html
+++ b/index.html
@@ -40,6 +40,43 @@
                     Costo
                 </th>
             </thead>
+            <tbody>
+                <td>
+                    1
+                </td>
+                <td>
+                    Biglietto Aereo
+                </td>
+                <td>
+                    120€
+                </td>
+            </tbody>
+            
+            <tbody>
+                <td>
+                    1
+                </td>
+                <td>
+                    Biglietto Aereo
+                </td>
+                <td>
+                    120€
+                </td>
+            </tbody>
+
+            <tbody>
+                <td>
+                    1
+                </td>
+                <td>
+                    Biglietto Aereo
+                </td>
+                <td>
+                    120€
+                </td>
+            </tbody>
+
+        
         </table>
 
     </main>
