--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <h2>
             Le mie spese
         </h2>
+    <!--Inizio tabella-->    
         <table>
             <thead>
                 <th>
