--- a/index.html
+++ b/index.html
@@ -76,9 +76,17 @@
                     120€
                 </td>
             </tbody>
-
-        
+            <tfoot>
+                <td colspan="2">
+                    Totale
+                </td>
+                <td>
+                    360€
+                </td>
+            </tfoot>
         </table>
+        <!--Fine tabella-->
+        <!--Fine prima parte principale-->
 
     </main>
     
