lista ordinata più non della terza parte principal

--- a/index.html
+++ b/index.html
@@ -108,6 +108,31 @@
         </ul>
         <hr>
         <!--Fine seconda parte principale-->
+        <!--Inizio terza parte principale-->
+        <h3>
+            Info utili:
+        </h3>
+        <ol>
+            <li>
+                Numeri utili di emergenza
+                <ul>
+                    <li>
+                        <strong>999</strong> - Emergenza
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>101</strong> - Numero della polizia
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>111</strong> - Numero assistenza medica
+                    </li>
+                </ul>
+            </li>
+        </ol>
+
 
 
     </main>
