conclusioni delle liste ordinate e non della 3pp

--- a/index.html
+++ b/index.html
@@ -131,7 +131,35 @@
                     </li>
                 </ul>
             </li>
+            <li>
+                Hotel
+                <ul>
+                    <li>
+                        <strong>Nome hotel</strong>: Buckingham Palace
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>Indirizzo hotel</strong>: Westminister, London SW1A 1AA, Regno Unito
+                    </li>
+                </ul>
+            </li>    
+            <li>
+                Aereo
+                <ul>
+                    <li>
+                        <strong>Volo di Andata</strong>: YI234X, ore 9.30 da Milano Malpensa
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>Volo di Ritorno</strong>: YI236X, ore 18.30 da London Heathrow
+                    </li>
+                </ul>
+            </li>
         </ol>
+        <hr>
+        <!--Fine terza parte principale-->
 
 
 
