--- a/index.html
+++ b/index.html
@@ -164,6 +164,15 @@
 
 
     </main>
+    <!--Parte finale-->
+    <footer>
+        <h4>
+            Le foto
+        </h4>
+        <img title="tower bridge and river" src="img/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg" alt="prima foto vacanza">
+        <img title="london" src="img/london-400x400-compressor_0.jpg" alt="seconda foto vacanza">
+    </footer>
+    <!--Fine parte finale-->
     
 </body>
 </html>
